<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">What do you want to do?</string>
    <string name="app_name">My Pantry</string>
    <string name="title_activity_my_pantry">My Pantry</string>
    <string name="title_activity_scan_the_product">Scan the product\'s code</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="title_activity_app_settings">Application settings</string>
    <string name="title_activity_print_qrcodes">Print QR Codes</string>
    <string name="title_activity_product_details">Product details</string>
    <string name="title_activity_edit_product">Edit product</string>
    <string name="title_activity_add_photo">Add photo</string>
    <string name="title_activity_error_and_maintenance_work">Errors and maintenance work</string>
    <string name="General_choose">Choose</string>
    <string name="General_char_counter">Max characters</string>
    <string name="General_press_back_agait_to_exit">Press back again to exit</string>
    <string name="General_required">(Required)</string>
    <string name="General_not_required">(Not required)</string>
    <string name="General_cancel">Cancel</string>
    <string name="General_author_label">Author</string>
    <string name="General_save">Save</string>
    <string name="General_user_is_premium">The user is already Premium ;-)</string>
    <string name="General_user">User</string>
    <string name="General_loggedOut">Logged out</string>
    <string name="General_premium_purchase_done">Thank you for your premium purchase! Wish you enjoy your use!</string>
    <string name="General_are_you_sure_delete_product">Are you sure you want to delete this product?</string>
    <string name="Menu_main_pantry">My pantry</string>
    <string name="Menu_scan_product">Scan the product\'s code</string>
    <string name="Menu_new_product">New product</string>
    <string name="Menu_own_categories">Own product categories</string>
    <string name="Menu_own_category_detail">Own category detail</string>
    <string name="Menu_storage_locations">Storage locations</string>
    <string name="Menu_app_settings">Application settings</string>
    <string name="Menu_about_author">About the author</string>
    <string name="MyPantryActivity_products_not_found">Oops! Not found products :(</string>
    <string name="MyPantryActivity_clear">Clear</string>
    <string name="MyPantryActivity_since">since</string>
    <string name="MyPantryActivity_for">for</string>
    <string name="MyPantryActivity_set">Set</string>
    <string name="MyPantryActivity_clear_filters">Clear filters</string>
    <string name="MyPantryActivity_delete_products">Delete products</string>
    <string name="MyPantryActivity_do_you_want_to_delete_products">Do you want to delete selected products?</string>
    <string name="MyPantryActivity_with_sugar">+Sugar</string>
    <string name="MyPantryActivity_with_salt">+Salt</string>
    <string name="ScanProductActivity_choose_scan_type">Choose whether you want to scan the QR of the product created by the application or scan the barcode of the store product.</string>
    <string name="ScanProductActivity_choose_product_to_copy">The barcode has been added to the following products. Select the product you want to add from the list.</string>
    <string name="ScanProductActivity_scan_qr_code">Scan QR code of the product</string>
    <string name="ScanProductActivity_scan_barcode">Scan the product barcode</string>
    <string name="ScanProductActivity_enter_barcode_manually">Enter the barcode manually</string>
    <string name="ScanProductActivity_product_not_found">Product was not found.</string>
    <string name="ScanProductActivity_scanner_hint">Important: The barcode scanner does not search for products that have not been previously added to the application.</string>
    <string name="ScanProductActivity_barcode_is_updated">Barcode has been updated</string>
    <string name="NewProductActivity_add_a_product">Add a product</string>
    <string name="NewProductActivity_product_added_successful">The product has been added to the product database.</string>
    <string name="NewProductActivity_products_added_successful">The products has been added to the product database.</string>
    <string name="NewProductActivity_cancel_product_adding">Do you want to cancel adding a new product?</string>
    <string name="NewProductActivity_quantity_value" translatable="false">1</string>
    <string name="NewProductActivity_volume_value" translatable="false">0</string>
    <string name="NewProductActivity_weight_value" translatable="false">0</string>
    <string name="StorageLocationsActivity_new_storage_location">New storage location</string>
    <string name="StorageLocationsActivity_no_storage_locations_statement">No storage locations added. Add a new button at the top of the screen.</string>
    <string name="StorageLocationDetailsActivity_name">Storage location name</string>
    <string name="StorageLocationDetailsActivity_description">Storage location description</string>
    <string name="StorageLocationDetailsActivity_update_storage_location">Save changes</string>
    <string name="StorageLocationDetailsActivity_delete_storage_location">Delete storage location</string>
    <string name="StorageLocationDetailsActivity_storage_location_delete_warning">Are you sure you want to delete this storage location?</string>
    <string name="StorageLocationDetailsActivity_storage_location_was_saved">Storage location was saved</string>
    <string name="CategoriesActivity_new_category">New category</string>
    <string name="CategoriesActivity_no_categories_statement">No categories added. Add a new button at the top of the screen.</string>
    <string name="CategoryDetailsActivity_name">Category name</string>
    <string name="CategoryDetailsActivity_description">Category description</string>
    <string name="CategoryDetailsActivity_update_category">Save changes</string>
    <string name="CategoryDetailsActivity_delete_category">Delete category</string>
    <string name="CategoryDetailsActivity_category_delete_warning">Are you sure you want to delete this category?</string>
    <string name="CategoryDetailsActivity_category_was_saved">Category was saved</string>
    <string name="EditProductActivity_save_product">Save product</string>
    <string name="EditProductActivity_cancel">Cancel</string>
    <string name="EditProductActivity_product_was_updated">Product was saved</string>
    <string name="AddPhotoActivity_photo_description">Photo description</string>
    <string name="AddPhotoActivity_take_photo">Take photo</string>
    <string name="AppSettingsActivity_general_settings">General settings</string>
    <string name="AppSettingsActivity_notifications_settings">Notifications settings</string>
    <string name="AppSettingsActivity_enabled">Enabled</string>
    <string name="AppSettingsActivity_disabled">Disabled</string>
    <string name="AppSettingsActivity_qr_code_sizes">Size of printed QR code labels</string>
    <string name="AppSettingsActivity_which_theme_user_prefer">Choose application mode</string>
    <string name="AppSettingsActivity_which_camera_to_scan_products">Camera for scanning QR codes</string>
    <string name="AppSettingsActivity_scanner_vibration_mode">Vibration on scan</string>
    <string name="AppSettingsActivity_scanner_sound_mode">Sound on scan</string>
    <string name="AppSettingsActivity_notifications_push">Notifications via push notications</string>
    <string name="AppSettingsActivity_notifications_email">Notifications via email</string>
    <string name="AppSettingsActivity_give_email_adress">Email address for notifications</string>
    <string name="AppSettingsActivity_how_many_days_before_the_expiration_date_send_a_notification">How many days before expiration?</string>
    <string name="AppSettingsActivity_import_product_database">Import product database</string>
    <string name="AppSettingsActivity_export_product_database">Export product database</string>
    <string name="AppSettingsActivity_clear_product_database">Clear product database</string>
    <string name="AppSettingsActivity_import_category_database">Import category database</string>
    <string name="AppSettingsActivity_export_category_database">Export category database</string>
    <string name="AppSettingsActivity_clear_category_database">Clear category database</string>
    <string name="AppSettingsActivity_import_storage_location_database">Import storage location database</string>
    <string name="AppSettingsActivity_export_storage_location_database">Export storage location database</string>
    <string name="AppSettingsActivity_clear_storage_location_database">Clear storage location database</string>
    <string name="AppSettingsActivity_database_backup">Database backup</string>
    <string name="AppSettingsActivity_version">Version</string>
    <string name="AppSettingsActivity_active_user">Active user</string>
    <string name="AppSettingsActivity_go_premium">Switch to Premium Account</string>
    <string-array name="AppSettingsActivity_database_mode">
        <item>Local (in phone)</item>
        <item>Online</item>
    </string-array>
    <string name="AppSettingsActivity_qr_code_size_big">Big</string>
    <string name="AppSettingsActivity_qr_code_size_small">Small</string>
    <string name="AppSettingsActivity_import_db">Import database from phone to cloud</string>
    <string name="PreferencesKey_selected_application_theme" translatable="false">SELECTED_APPLICATION_THEME</string>
    <string name="PreferencesKey_scan_camera" translatable="false">SCAN_CAMERA</string>
    <string name="PreferencesKey_vibration_on_scanner" translatable="false">VIBRATION_ON_SCANNER?</string>
    <string name="PreferencesKey_sound_on_scanner" translatable="false">SOUND_ON_SCANNER?</string>
    <string name="PreferencesKey_notification_days_before_expiration" translatable="false">HOW_MANY_DAYS_BEFORE_EXPIRATION_DATE_SEND_A_NOTIFICATION?</string>
    <string name="PreferencesKey_email_address" translatable="false">EMAIL_ADDRESS</string>
    <string name="PreferencesKey_push_notifications" translatable="false">PUSH_NOTIFICATIONS?</string>
    <string name="PreferencesKey_email_notifications" translatable="false">EMAIL_NOTIFICATIONS?</string>
    <string name="PreferencesKey_clear_product_db" translatable="false">CLEAR_PRODUCT_DB</string>
    <string name="PreferencesKey_restore_product_db" translatable="false">IMPORT_PRODUCT_DB</string>
    <string name="PreferencesKey_backup_product_db" translatable="false">EXPORT_PRODUCT_DB</string>
    <string name="PreferencesKey_clear_category_db" translatable="false">CLEAR_CATEGORY_DB</string>
    <string name="PreferencesKey_restore_category_db" translatable="false">IMPORT_CATEGORY_DB</string>
    <string name="PreferencesKey_backup_category_db" translatable="false">EXPORT_CATEGORY_DB</string>
    <string name="PreferencesKey_clear_storage_location_db" translatable="false">CLEAR_STORAGE_LOCATION_DB</string>
    <string name="PreferencesKey_restore_storage_location_db" translatable="false">IMPORT_STORAGE_LOCATION_DB</string>
    <string name="PreferencesKey_backup_storage_location_db" translatable="false">EXPORT_STORAGE_LOCATION_DB</string>
    <string name="PreferencesKey_active_user" translatable="false">ACTIVE_USER</string>
    <string name="PreferencesKey_version" translatable="false">VERSION</string>
    <string name="PreferencesKey_qr_code_size" translatable="false">QR_CODE_SIZE</string>
    <string name="PreferencesKey_go_premium" translatable="false">GO_PREMIUM</string>
    <string name="PreferencesKey_database_mode" translatable="false">DATABASE_MODE</string>
    <string name="PreferencesKey_import_db" translatable="false">IMPORT_OFFLINE_DB_TO_ONLINE</string>
</resources>