<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hermanowicz.pantry.ui.storage_location_detail.StorageLocationDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/button_filter_bottom_padding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragmentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/StorageLocationDetailsActivity_update_storage_location"
                    android:textAppearance="?android:textAppearanceLarge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/categoryNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/StorageLocationDetailsActivity_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentLabel" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/edittext_sides_margin"
                    android:text="@={viewModel.storageLocationName}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryNameText" />

                <View
                    android:id="@+id/dividerAfterCategoryName"
                    style="@style/Divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryNameInput" />

                <TextView
                    android:id="@+id/categoryDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/StorageLocationDetailsActivity_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dividerAfterCategoryName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/edittext_sides_margin"
                    android:text="@={viewModel.storageLocationDescription}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryDescriptionText" />

                <View
                    android:id="@+id/dividerAfterCategoryDescription"
                    style="@style/Divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryDescriptionInput" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:onClick="@{() -> viewModel.onClickUpdateStorageLocation()}"
            android:text="@string/StorageLocationDetailsActivity_update_storage_location"
            style="@style/CustomButton"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/button_sides_margin"
            android:layout_marginEnd="@dimen/button_sides_margin"
            android:onClick="@{() -> viewModel.onClickDeleteStorageLocation()}"
            android:text="@string/StorageLocationDetailsActivity_delete_storage_location"
            style="@style/CustomButton"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>